--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:hardwareAccelerated="true"
         android:networkSecurityConfig="@xml/network_security_config">
         <activity
+            android:exported="false"
             android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
