--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:hardwareAccelerated="true"
         android:networkSecurityConfig="@xml/network_security_config">
         <activity
-            android:exported="false"
+            android:exported="true"
             android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
@@ -19,11 +19,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AnimationFromAssetsActivity" />
-        <activity android:name=".AnimationFromNetworkActivity" />
-        <activity android:name=".AnimationWithDynamicImageActivity" />
-        <activity android:name=".AnimationFromLayoutActivity" />
-        <activity android:name=".AnimationFromClickActivity" />
+        <activity android:exported="false" android:name=".AnimationFromAssetsActivity" />
+        <activity android:exported="false" android:name=".AnimationWithDynamicImageActivity" />
+        <activity android:exported="false" android:name=".AnimationFromLayoutActivity" />
+        <activity android:exported="false" android:name=".AnimationFromClickActivity" />
+        <activity android:exported="false" android:name=".AnimationFromListActivity" />
     </application>
 
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
