--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,11 @@ apply plugin: 'kotlin-android'
 
 android {
     namespace ="com.example.ponycui_home.svgaplayer"
-    compileSdk 33
+    compileSdk 35
     defaultConfig {
         applicationId "com.example.ponycui_home.svgaplayer"
         minSdkVersion 21
-        targetSdkVersion 33
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
     }
@@ -26,8 +26,11 @@ android {
         exclude 'META-INF/MANIFEST.MF'
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility JavaVersion.VERSION_19
+        targetCompatibility JavaVersion.VERSION_19
+    }
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_19.toString()
     }
 }
 
@@ -36,4 +39,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation project(':library')
     implementation 'com.squareup.okhttp3:okhttp:4.10.0'
+    implementation 'io.coil-kt:coil:2.7.0'
+    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'androidx.activity:activity:1.10.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
 }
